# Bitserde

./: Cargo.toml  readme.md
src/: container.rs  encoding.rs  error.rs  lib.rs
src/de/: mod.rs
src/ser/: mod.rs
