[package]
name = "bitserde"
description = "bit serialization and deserialization"
license = "MIT"
repository = "https://github.com/PizzaCrust/Bitserde"
version = "0.1.0"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
bitvec = "0.18.1"
paste = "1.0"
byteorder = "1.3.4"